--- a/styles.css
+++ b/styles.css
@@ -384,3 +384,15 @@ footer {
     font-size: 22px;
   }
 }
+
+.metodos-pago {
+  margin-top: 15px;
+  text-align: center;
+}
+
+.metodos-pago img {
+  border: 2px solid #ddd;
+  border-radius: 10px;
+  margin-top: 10px;
+  max-width: 100%;
+}
